# codecamp-bughunters

./: Collaboration.md  README.md  code_week3.py  main.py  pyproject.toml
codecamp/: __init__.py
diagram/: function_dependencies.drawio  function_input_output.drawio  main_script_diagram.drawio
examples/: code_week3.py  code_week4.py  main.py
src/codecamp/: __init__.py
tests/: test_week4.py
